<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="20dp"
    android:background="@color/page_back"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >
	    <EditText 
	        android:id="@+id/et_phone"
		    android:layout_width="0dp"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
	        android:hint="@string/tpl_msg_login_hint"/>
	    <Button 
	        android:id="@+id/btn_get_verify_code"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/tpl_get_verify_code"/>
	</LinearLayout>
	 <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="10dip"
	    android:orientation="horizontal" >
	    <EditText 
	        android:id="@+id/et_verify_code"
		    android:layout_width="0dp"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
	        android:hint="@string/tpl_verify_code_hint"/>
	    <Button 
	        android:id="@+id/btn_send_verify_code"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/tpl_send_verify_code"/>
	</LinearLayout>
</LinearLayout>
