<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:background="#ff22292c"
        android:padding="16dp" >

        <TextView
            android:id="@+id/dialog_tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/tpl_change_user_name_title"
            android:textColor="#ffffffff"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/dialog_btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/checked" />
    </RelativeLayout>

    <EditText
        android:id="@+id/dialog_ev_info"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:text="@string/tpl_boy"
        android:textColor="#ff353535"
        android:textSize="15sp"
        android:singleLine="true"
        android:maxLength="30"
        android:background="@drawable/et_bg"  />

    <TextView
        android:id="@+id/dialog_tv_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="20dip"
        android:text="@string/tpl_input_user_name_hint"
        android:textColor="#ffaaaaaa"
        android:textSize="13sp" />

</LinearLayout>